# C

./: .gitignore  ADAPTIVE_CHUNKING_GUIDE.md  ADAPTIVE_CHUNKING_QUICKSTART.md  ARCHITECTURE_OVERVIEW.md  BENCHMARK.md  BENCH_COBOL_IMPLEMENTATION.md  COBOL_V16_ADVANCED_FEATURES.md  COBOL_V16_DELIVERY_SUMMARY.md  COMPRESSION_TEST_REPORT.md  COMPRESSION_TEST_SUMMARY.txt  COPYRIGHT_REGISTRY.md  DATACENTER_24_7_VALIDATION_REPORT.md  DATACENTER_STABILITY_VALIDATION.py  DEBUGGING_REPORT.md  DEBUG_SUMMARY.txt  DEBUG_VERIFICATION.md  DECISION_MATRIX_NEXT_STEPS.md  DOCUMENTATION_UPDATE_SUMMARY.md  DP_OPTIMIZER_PATCHES.py  FINAL_L0_L8_COMPRESSION_TEST_REPORT.md  FINAL_STATUS.txt  GIT_COMMIT_READY.md  GPU_ACCELERATION_GUIDE.md  GPU_ACCELERATION_PHASE.md  HARDWARE_OPTIMIZATION_GUIDE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_ROADMAP_PHASE1.md  INDUSTRIAL_STRESS_SUMMARY.md  INFRASTRUCTURE_ARCHITECTURE.md  LATENCY_OPTIMIZATION_GUIDE.md  LICENSE.md  MIGRATION_PHASE3_SUMMARY.md  NATIVE_BINDINGS_GUIDE.md  NOTICE  OPTIMIZATION_QUICKSTART.md  PERFORMANCE_PROFILES.md  PHASE1_CHECKPOINT.md  PHASE4_MIGRATION_PROGRESS.md  PHASE4_MIGRATION_PROGRESS_UPDATED.md  PHASE4_PLAN.md  (+86 more)
.github/: ARCHITECT_GOVERNANCE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
benchmarks/: config.py  config_small.py  generate_datasets.py  run_all.py
cobol-core/: Cargo.toml
cobol-core/examples/: demo.rs
cobol-core/java/io/cobol/core/: CobolCompressor.java  CobolCompressorTest.java
cobol-core/src/: error.rs  layer1.rs  layer2.rs  layer3.rs  lib.rs  napi_bindings.rs  python_bindings.rs
(+297 files in other folders)
