[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cobol-protocol"
version = "0.1.0"
description = "Native high-performance multi-layer compression library with Python bindings"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [
    {name = "COBOL Protocol", email = "info@cobolprotocol.io"}
]
keywords = ["compression", "cobol", "protocol", "native"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/cobolincorporated/cobol-protocol"
Repository = "https://github.com/cobolincorporated/cobol-protocol"
Documentation = "https://cobolprotocol.io/docs"

[tool.maturin]
python-source = "src-py"
module-name = "cobol_protocol.cobol_core"
bindings = "pyo3"
manifest-path = "cobol-core/Cargo.toml"
